--- a/UnitTestProject1/UnitTestProject1.csproj
+++ b/UnitTestProject1/UnitTestProject1.csproj
@@ -49,6 +49,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bill.cs" />
+    <Compile Include="IEnumerableTest.cs" />
+    <Compile Include="OverLoadPlus.cs" />
     <Compile Include="RemoveMethod.cs" />
     <Compile Include="ToStringTest.cs" />
     <Compile Include="UnitTest1.cs" />
