REmove null test since it was no longer throwing exception due to if statement added to ToString(). Commented out Overload tests so I could test without errors

--- a/UnitTestProject1/UnitTestProject1.csproj
+++ b/UnitTestProject1/UnitTestProject1.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bill.cs" />
+    <Compile Include="Hine.cs" />
     <Compile Include="IEnumerableTest.cs" />
     <Compile Include="OverLoadPlus.cs" />
     <Compile Include="RemoveMethod.cs" />
