Added test PlusOverLoad_ListOfTwoSetsOfNumbers_CountShouldEqualSix()

--- a/UnitTestProject1/UnitTestProject1.csproj
+++ b/UnitTestProject1/UnitTestProject1.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Bill.cs" />
     <Compile Include="Hine.cs" />
     <Compile Include="IEnumerableTest.cs" />
+    <Compile Include="OverLoadMinus.cs" />
     <Compile Include="OverLoadPlus.cs" />
     <Compile Include="RemoveMethod.cs" />
     <Compile Include="ToStringTest.cs" />
