Added Zip() and fixed issues with tests not working right

--- a/UnitTestProject1/UnitTestProject1.csproj
+++ b/UnitTestProject1/UnitTestProject1.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bill.cs" />
+    <Compile Include="Color.cs" />
     <Compile Include="Hine.cs" />
     <Compile Include="IEnumerableTest.cs" />
     <Compile Include="OverLoadMinus.cs" />
@@ -58,6 +59,7 @@
     <Compile Include="ToStringTest.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ZipTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
